Fix header buttons on Safari

--- a/src/components/Bookmarks/bookmarks.less
+++ b/src/components/Bookmarks/bookmarks.less
@@ -22,6 +22,11 @@
     color: @puka-header-color;
   }
 
+  .button {
+    padding: 0;
+    border: 0;
+  }
+
   .search {
     width: @puka-header-search-width;
   }
